--- a/services/sql-driver/reports/jacoco/mtogo.sql.adapter.out/RabbitMQEventProducer.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.adapter.out/RabbitMQEventProducer.java.html
@@ -30,114 +30,134 @@ public class RabbitMQEventProducer {
 
     // Connection pooling
     private final Connection connection;
-    private BlockingQueue&lt;Channel&gt; channelPool;
-<span class="fc" id="L34">    private final int POOL_SIZE = 10;</span>
-<span class="fc" id="L35">    private static final Object initLock = new Object();</span>
+    /*
+     * private BlockingQueue&lt;Channel&gt; channelPool;
+     * private final int POOL_SIZE = 10;
+     * private static final Object initLock = new Object();
+     */
     private final ObjectMapper mapper;
 
-<span class="fc" id="L38">    public RabbitMQEventProducer(ObjectMapper mapper, Connection connection) throws IOException, TimeoutException, InterruptedException {</span>
-<span class="fc" id="L39">        this.mapper = mapper;</span>
-<span class="fc" id="L40">        this.connection = connection;</span>
-<span class="fc" id="L41">        fillChannelPool();</span>
-<span class="fc" id="L42">    }</span>
+<span class="fc" id="L40">    public RabbitMQEventProducer(ObjectMapper mapper, Connection connection)</span>
+            throws IOException, TimeoutException, InterruptedException {
+<span class="fc" id="L42">        this.mapper = mapper;</span>
+<span class="fc" id="L43">        this.connection = connection;</span>
+        // fillChannelPool();
+<span class="fc" id="L45">    }</span>
 
     public boolean publishMessage(String routingKey, String message) {
 
-        try {
-<span class="fc" id="L47">            fillChannelPool();</span>
-<span class="nc" id="L48">        } catch (IOException | TimeoutException | InterruptedException ex) {</span>
-<span class="nc" id="L49">            log.error(&quot;Failed to get producer connection: {}&quot;, ex.getLocalizedMessage());</span>
-<span class="nc" id="L50">            return false;</span>
-<span class="fc" id="L51">        }</span>
+        /*
+         * try {
+         * fillChannelPool();
+         * } catch (IOException | TimeoutException | InterruptedException ex) {
+         * log.error(&quot;Failed to get producer connection: {}&quot;, ex.getLocalizedMessage());
+         * return false;
+         * }
+         */
 
-<span class="fc" id="L53">        Channel channel = null;</span>
+        // Channel channel = null;
         try {
             // Get channel from pool
-<span class="fc" id="L56">            channel = channelPool.poll(5, TimeUnit.SECONDS);</span>
-<span class="pc bpc" id="L57" title="1 of 2 branches missed.">            if (channel == null) {</span>
-<span class="nc" id="L58">                log.error(&quot;No channels available in pool&quot;);</span>
-<span class="nc" id="L59">                return false;</span>
-            }
+            /*
+             * channel = channelPool.poll(5, TimeUnit.SECONDS);
+             * if (channel == null) {
+             * log.error(&quot;No channels available in pool&quot;);
+             * return false;
+             * }
+             */
 
             // Recreate channel if closed
-<span class="pc bpc" id="L63" title="1 of 2 branches missed.">            if (!channel.isOpen()) {</span>
-<span class="nc" id="L64">                channel = connection.createChannel();</span>
-<span class="nc" id="L65">                channel.exchangeDeclare(EXCHANGE_NAME, &quot;topic&quot;, true);</span>
-<span class="nc" id="L66">                channel.confirmSelect();</span>
+            /*
+             * if (!channel.isOpen()) {
+             * channel = connection.createChannel();
+             * channel.exchangeDeclare(EXCHANGE_NAME, &quot;topic&quot;, true);
+             * channel.confirmSelect();
+             * }
+             */
+
+<span class="fc" id="L78">            try (Channel channel = connection.createChannel()) {</span>
+                
+<span class="fc" id="L80">                channel.exchangeDeclare(EXCHANGE_NAME, &quot;topic&quot;, true);</span>
+<span class="fc" id="L81">                channel.confirmSelect();</span>
+
+<span class="fc" id="L83">                channel.basicPublish(EXCHANGE_NAME, routingKey, null, message.getBytes(&quot;UTF-8&quot;));</span>
+                // Maybe log the message that is being sent?
+
+<span class="pc bpc" id="L86" title="1 of 2 branches missed.">                if (!channel.waitForConfirms(5000)) {</span>
+<span class="nc" id="L87">                    throw new IOException(&quot;Confirm wait time exceeded 5000ms&quot;);</span>
+                }
+<span class="fc" id="L89">                return true;</span>
             }
 
-<span class="fc" id="L69">            channel.basicPublish(EXCHANGE_NAME, routingKey, null, message.getBytes(&quot;UTF-8&quot;));</span>
-            // Maybe log the message that is being sent?
-
-<span class="pc bpc" id="L72" title="1 of 2 branches missed.">            if (!channel.waitForConfirms(5000)) {</span>
-<span class="nc" id="L73">                throw new IOException(&quot;Confirm wait time exceeded 5000ms&quot;);</span>
-            }
-<span class="fc" id="L75">            return true;</span>
-
-<span class="nc" id="L77">        } catch (IOException | TimeoutException | InterruptedException e) {</span>
-<span class="nc" id="L78">            log.error(e.getMessage());</span>
-<span class="nc" id="L79">            return false;</span>
+<span class="fc" id="L92">        } catch (IOException | TimeoutException | InterruptedException e) {</span>
+<span class="fc" id="L93">            log.error(e.getMessage());</span>
+<span class="fc" id="L94">            return false;</span>
         } finally {
             // Return channel to pool
-<span class="pc bpc" id="L82" title="2 of 4 branches missed.">            if (channel != null &amp;&amp; channel.isOpen()) {</span>
-<span class="fc" id="L83">                channelPool.offer(channel);</span>
-            } else {
-                try {
-<span class="nc" id="L86">                    fillChannelPool();</span>
-<span class="nc" id="L87">                } catch (TimeoutException | InterruptedException | IOException ex) {</span>
-<span class="nc" id="L88">                   log.error(&quot;Error refiling channel pool: {}&quot;, ex.getLocalizedMessage());</span>
-<span class="nc" id="L89">                }</span>
-            }
+            /*
+             * if (channel != null &amp;&amp; channel.isOpen()) {
+             * channelPool.offer(channel);
+             * } else {
+             * try {
+             * fillChannelPool();
+             * } catch (TimeoutException | InterruptedException | IOException ex) {
+             * log.error(&quot;Error refiling channel pool: {}&quot;, ex.getLocalizedMessage());
+             * }
+             * }
+             */
         }
     }
 
     public boolean publishObject(String routingKey, Object value) throws IOException {
         try {
-<span class="pc bpc" id="L96" title="1 of 2 branches missed.">            if (value == null) {</span>
-<span class="nc" id="L97">                throw new IllegalArgumentException(&quot;Object was null!&quot;);</span>
+<span class="fc bfc" id="L113" title="All 2 branches covered.">            if (value == null) {</span>
+<span class="fc" id="L114">                throw new IllegalArgumentException(&quot;Object was null!&quot;);</span>
             }
 
-<span class="fc" id="L100">            String valStr = mapper.writeValueAsString(value);</span>
-<span class="fc" id="L101">            log.debug(&quot;DTO mapped to string:\n&quot; + valStr);</span>
+<span class="fc" id="L117">            String valStr = mapper.writeValueAsString(value);</span>
+<span class="fc" id="L118">            log.debug(&quot;DTO mapped to string:\n&quot; + valStr);</span>
 
-<span class="pc bpc" id="L103" title="1 of 2 branches missed.">            if (publishMessage(routingKey, valStr)) {</span>
-<span class="fc" id="L104">                log.info(&quot;Object published to MQ&quot;);</span>
-<span class="fc" id="L105">                log.debug(&quot;Payload: \n&quot; + valStr);</span>
-<span class="fc" id="L106">                return true;</span>
+<span class="fc bfc" id="L120" title="All 2 branches covered.">            if (publishMessage(routingKey, valStr)) {</span>
+<span class="fc" id="L121">                log.info(&quot;Object published to MQ&quot;);</span>
+<span class="fc" id="L122">                log.debug(&quot;Payload: \n&quot; + valStr);</span>
+<span class="fc" id="L123">                return true;</span>
             } else {
-<span class="nc" id="L108">                log.error(&quot;Object publish failed!&quot;);</span>
-<span class="nc" id="L109">                log.debug(&quot;Payload: \n&quot; + valStr);</span>
+<span class="fc" id="L125">                log.error(&quot;Object publish failed!&quot;);</span>
+<span class="fc" id="L126">                log.debug(&quot;Payload: \n&quot; + valStr);</span>
             }
 
-<span class="nc" id="L112">        } catch (IOException | IllegalArgumentException e) {</span>
-<span class="nc" id="L113">            log.error(&quot;Error publishing object: &quot; + e.getMessage());</span>
-<span class="nc" id="L114">            throw e;</span>
-<span class="nc" id="L115">        }</span>
-<span class="nc" id="L116">        return false;</span>
+<span class="fc" id="L129">        } catch (IOException | IllegalArgumentException e) {</span>
+<span class="fc" id="L130">            log.error(&quot;Error publishing object: &quot; + e.getMessage());</span>
+<span class="fc" id="L131">            throw e;</span>
+        }
+<span class="fc" id="L133">        return false;</span>
     }
 
-    private void fillChannelPool() throws TimeoutException, InterruptedException, IOException {
-<span class="fc" id="L120">        synchronized (initLock) {</span>
-            try {
-
-<span class="fc bfc" id="L123" title="All 2 branches covered.">                if (channelPool == null) {</span>
-<span class="fc" id="L124">                    channelPool = new ArrayBlockingQueue&lt;&gt;(POOL_SIZE);</span>
-                }
-
-<span class="fc bfc" id="L127" title="All 2 branches covered.">                while (channelPool.size() &lt; POOL_SIZE) {</span>
-<span class="fc" id="L128">                    Channel channel = this.connection.createChannel();</span>
-<span class="fc" id="L129">                    channel.exchangeDeclare(EXCHANGE_NAME, &quot;topic&quot;, true);</span>
-<span class="fc" id="L130">                    channel.confirmSelect();</span>
-<span class="fc" id="L131">                    channelPool.offer(channel);</span>
-<span class="fc" id="L132">                }</span>
-
-<span class="fc" id="L134">                log.info(&quot;Producer initialized with {} channels&quot;, POOL_SIZE);</span>
-<span class="nc" id="L135">            } catch (IOException e) {</span>
-<span class="nc" id="L136">                log.error(&quot;Failed to initialize Producer&quot;, e);</span>
-<span class="nc" id="L137">                throw e;</span>
-<span class="fc" id="L138">            }</span>
-
-<span class="fc" id="L140">        }</span>
-<span class="fc" id="L141">    }</span>
+    /*
+     * private void fillChannelPool() throws TimeoutException, InterruptedException,
+     * IOException {
+     * synchronized (initLock) {
+     * try {
+     * 
+     * if (channelPool == null) {
+     * channelPool = new ArrayBlockingQueue&lt;&gt;(POOL_SIZE);
+     * }
+     * 
+     * while (channelPool.size() &lt; POOL_SIZE) {
+     * Channel channel = this.connection.createChannel();
+     * channel.exchangeDeclare(EXCHANGE_NAME, &quot;topic&quot;, true);
+     * channel.confirmSelect();
+     * channelPool.offer(channel);
+     * }
+     * 
+     * log.info(&quot;Producer initialized with {} channels&quot;, POOL_SIZE);
+     * } catch (IOException e) {
+     * log.error(&quot;Failed to initialize Producer&quot;, e);
+     * throw e;
+     * }
+     * 
+     * }
+     * }
+     */
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
