--- a/services/sql-driver/reports/jacoco/mtogo.sql.adapter.out/RabbitMQRpcResponder.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.adapter.out/RabbitMQRpcResponder.java.html
@@ -55,15 +55,15 @@ public class RabbitMQRpcResponder implements IRpcResponder {
 <span class="nc" id="L55">        try (Channel channel = connection.createChannel()) {</span>
 
 <span class="nc" id="L57">            channel.basicPublish(</span>
-                    &quot;order&quot;,
+<span class="nc" id="L58">                    &quot;order&quot;,</span>
 <span class="nc" id="L59">                    delivery.getProperties().getReplyTo(),</span>
-                    props,
+<span class="nc" id="L60">                    props,</span>
 <span class="nc" id="L61">                    respStr.getBytes(java.nio.charset.StandardCharsets.UTF_8));</span>
 
 <span class="nc" id="L63">        } catch (TimeoutException e) {</span>
 <span class="nc" id="L64">            log.error(&quot;Timeout on opening reply channel: {}&quot;, e.getLocalizedMessage());</span>
 <span class="nc" id="L65">            throw new IOException(e);</span>
-<span class="nc" id="L66">        }</span>
+        }
 <span class="nc" id="L67">    }</span>
 
     @Override
@@ -77,14 +77,14 @@ public class RabbitMQRpcResponder implements IRpcResponder {
 <span class="nc" id="L77">        try (Channel channel = connection.createChannel()) {</span>
 
 <span class="nc" id="L79">            channel.basicPublish(</span>
-                    &quot;&quot;,
+<span class="nc" id="L80">                    &quot;order&quot;,</span>
 <span class="nc" id="L81">                    delivery.getProperties().getReplyTo(),</span>
-                    props,
+<span class="nc" id="L82">                    props,</span>
 <span class="nc" id="L83">                    &quot;{\&quot;status\&quot;:\&quot;error\&quot;}&quot;.getBytes(java.nio.charset.StandardCharsets.UTF_8));</span>
 <span class="nc" id="L84">        } catch (TimeoutException e) {</span>
 <span class="nc" id="L85">            log.error(&quot;Timeout on opening reply channel: {}&quot;, e.getLocalizedMessage());</span>
 <span class="nc" id="L86">            throw new IOException(e);</span>
-<span class="nc" id="L87">        }</span>
+        }
 <span class="nc" id="L88">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
